<resources>
    <string name="app_name">Books Sharing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_book">Book Activity</string>
    <string name="title_activity_entity">Entity Activity</string>
    <string name="dialog_title_book_query">Filter Books</string>
    <string name="book_title">book title</string>
    <string name="author_name">author name</string>
    <string name="from_price">from price</string>
    <string name="to_price">to price</string>

    <string name="genre_general">general</string>
    <string name="genre_action">action</string>
    <string name="genre_romance">romance</string>
    <string name="genre_science">science</string>
    <string name="genre_science_fiction">science fiction</string>
    <string name="genre_drama">drama</string>
    <string name="genre_satire">satire</string>
    <string name="genre_children">children</string>
    <string name="genre_comics">comics</string>
    <string name="genre_biographies">biographies</string>
    <string name="genre_fantasy">fantasy</string>
    <string name="genre_health">health</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="bookSuppliers">Suppliers</string>
    <string name="suppliers_colon">Suppliers:</string>
    <string name="buy">buy</string>
    <string name="order_added_to_cart">The order have been added to cart.</string>
    <string name="do_order">Order</string>
    <string name="num_rates">{0} Rates</string>
    <string name="reviews_colon">What other pepole think:</string>
    <string name="remove">Remove</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="delete_order_message">Delete Order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rating_box_title">Rate The Book</string>
    <string name="rate">Rate</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="welcome">Welcome</string>
    <string name="login_dialog_message">Write your\'s user-name and password in order to log in:</string>
    <string name="log_in">Log In</string>
    <string name="wrong_log_in_title">Wrong Log In</string>
    <string name="error_on_login">Error occured when trying login</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="ok">OK</string>
    <string name="category">Category</string>
    <string name="hello">Hello</string>
    <string name="guest">Guest</string>
    <string name="book_fragment_title">Book Details</string>
    <string name="supplier_fragment_title">Supplier Details</string>
    <string name="anonymous">Anonymous</string>
    <string name="logout">Logout</string>
    <string name="books">Books</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="login">Login</string>
    <string name="amount">Amount</string>
    <string name="rating">Rating:</string>
    <string name="yours_rate">Yours rate:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="show_all_reviews">Show all reviews</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="delete">Delete</string>
    <string name="toast_order_deleted">Order has been deleted</string>
    <string name="confirm">Confirm</string>
    <string name="choose">Choose</string>
    <string name="registration_Succeed">Registration succeed.</string>
    <string name="toast_loged_out">You have been logged out</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="transaction_message">Do you want to proceed ordering?</string>
    <string name="confirm_order_message">Are you sure you want to confirm this order?</string>
    <string name="transaction_error_message">Something got wrong with the transaction...</string>
    <string name="toast_transaction_ok">Order has been confirmed and will be shipped soon</string>
    <string name="total_sum">Total Sum</string>
    <string name="upload_image_failed">Upload image failed.</string>
    <string name="wrong_address_message">Please provide valid address</string>
    <string name="wrong_credit_message">Credit card must contain at least 8 digits.</string>
    <string name="cart_empty_message">The cart is empty</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="credit_number">Credit Number</string>
    <string name="order_details">Order Details</string>
    <string name="orders">Orders</string>
    <string name="save">Save</string>
    <string name="user_details">User Details</string>
    <string name="user_details_updated">User details was updated.</string>
    <string name="camera_galery_choose_message">Check way to bring image.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="email">e-mail</string>
    <string name="new_transaction_title">Confirm Order</string>
    <string name="books_chosen">Chosen Books</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="clear_cart_message">Are you sure you want to clear the cart?</string>
    <string name="book_list_fragment_title">Books in Store</string>
    <string name="cart_fragment_title">Cart</string>
    <string name="user_details_title">User Details</string>
    <string name="registration_title">Registration</string>
    <string name="supplier_orders_title">My Orders</string>
    <string name="old_orders_fragment_title">My Orders</string>

    <string-array name="customerSupplierItems">
        <item>Customer</item>
        <item>Supplier</item>
    </string-array>
    <string name="orderstatus_new_order">New Order</string>
    <string name="orderstatus_waiting_for_paying">Waiting for Paying</string>
    <string name="orderstatus_sent">Sent</string>
    <string name="orderstatus_closed">Closed</string>
    <string name="orderstatus_waiting_for_cancel">Waiting for Cancel</string>
    <string name="orderstatus_canceled">Canceled</string>
    <string name="preference_file_key">ourPreferenceFileKey</string>
    <string name="no_items_list_view">No items to show</string>
    <string name="add">Add</string>
    <string name="book_edit_title">Edit Book details</string>
    <string name="book_author">Book Author</string>
    <string name="edit">Edit</string>
    <string name="book_was_updated">The book updated</string>
    <string name="my_books">My Books</string>
    <string name="transaction_title">Transactions</string>
    <string name="amount_available_colon">Amount Available:</string>
    <string name="price">Price</string>
    <string name="transactions">Transactions</string>
    <string name="registeration_problem_default">Problem occurred while the registration</string>
    <string name="more_details">More details</string>
    <string name="username_taken">The user מame have been taken.</string>
    <string name="username_should_not_empty">The user name should not be empty</string>
    <string name="from">from</string>
    <string name="up_to">to</string>
    <string name="choose_date">Choose Date\\</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="new_account">New account</string>
    <string name="remember_me">Remember me</string>
    <string name="supply_the_book">Supply the book</string>
    <string name="book_was_removed_from_supplier">The book have been removed from yours books.</string>
    <string name="book_was_added_to_supplier">The book was added for yours books</string>
    <string name="book_was_updated_to_supplier">Your book was updated.</string>
    <string name="new_book_review_dialog">You have not yet have this book. in yours books. write the data and click to add.</string>
    <string name="update_book_review_dialog">These are current data of book that you provides:</string>
    <string name="please_wait">Please Wait</string>
    <string name="trying_to_connect">Trying to connect</string>
    <string name="registering">Registering</string>
    <string name="loading">Loading</string>
    <string name="updating_book_supplying">Updating book supplying</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel_order_massage">Are you sure you want to cancel this order?</string>
    <string name="toast_order_canceled">The order has been canceled</string>
    <string name="cancel_confirm">Confirm Cancel</string>
    <string name="cancel_reject">Reject Cancel</string>
    <string name="reject_cancel_oreder_message">Reject cancel of order?</string>
    <string name="toast_order_wait_cancel">The cancel request has been sent to supplier</string>
    <string name="toast_order_cancel_reject">Cancel request has been rejected</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="toast_order_waiting_for_pay">The order will finally confirmed after paying confirmation</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="confirm_payment_message">You are about to confirm payment and delivering the order</string>
    <string name="toast_order_sent">Order has been sent</string>
    <string name="confirm_receive">Confirm Receive</string>
    <string name="confirm_receive_message">Do you confirm the order has been received by you?</string>
    <string name="toast_order_closed">The order has been closed</string>
    <string name="logining_in">logning in</string>
    <string name="prossecing">Prossecing</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="try_again">Try again</string>
    <string name="order_not_enough_amount">There is no more books available currently</string>
    <string name="available">Available</string>
    <string name="book_update_dialog">Update Yours Book</string>
    <string name="remove_from_my_books">remove from my books</string>
    <string name="remove_from_my_books_message">Are you sure you want to remove this book from your book list?</string>
    <string name="book_was_deleted">The book has been deleted.</string>
    <string name="edit_book">Edit book</string>
    <string name="delete_book">Delete book</string>
    <string name="supplier">Supplier</string>
    <string name="mail_from_app">Mail from app</string>
    <string name="orders_in_this_transactions">Orders in this transactions</string>
    <string name="connection_error">Connection error</string>
    <string name="all">All</string>
    <string name="date">Date</string>
    <string name="shipment_address">Shipment address</string>
    <string name="total_price">Total price</string>
    <string name="do_you_want_to_change_order_status">Do you really want to change the order status to %s?</string>
    <string name="change_order_status">Change order status</string>
    <string name="order_status_changed">The order status has changed</string>
    <string name="loading_information">Loading Information</string>
    <string name="toast_review_updated">The review was updated.</string>
    <string name="canceling">canceling</string>
</resources>
