<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/default_vertical_seperate">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/login_dialog_message"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/user_name"
            android:singleLine="true"
            android:id="@+id/username"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:singleLine="true"
            android:id="@+id/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>