<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_activity_padding">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/bookImage"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/image_book"
        android:scaleType="fitCenter" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/book_title"
            android:singleLine="true"
            android:id="@+id/bookTitle"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/book_author"
            android:singleLine="true"
            android:id="@+id/bookAuthor"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/category"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bookGenreSpinner"
            android:spinnerMode="dropdown"
            android:touchscreenBlocksFocus="false"
            android:transitionGroup="false" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="onActionOk" />

</LinearLayout>